@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN Trunk):
 ----------------------------
 
+- mapowscommon.c: fix support multiple namespaces (#2690)
+
 - Fix OGC simple filters on SDE layers (#2685)
 
 - wfs11 getcapabilities: correct memory corruption (#2686)
